--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <div class="container">
-        <h1>Weather App</h1>
-        <div class="search-box">
-            <input type="text" id="cityInput" placeholder="Enter city name">
-            <button id="searchBtn">Search</button>
+<body class="bg-gradient-to-r from-blue-500 to-purple-600 flex justify-center items-center min-h-screen">
+    <div class="weather-container p-8 rounded-lg shadow-xl text-center">
+        <h1 class="text-3xl font-bold text-white">Weather App</h1>
+        <div class="search-box mt-4 flex">
+            <input type="text" id="cityInput" placeholder="Enter city name" class="p-3 rounded-l-lg text-gray-800 focus:outline-none w-full">
+            <button id="searchBtn" class="bg-blue-600 text-white px-4 py-3 rounded-r-lg hover:bg-blue-700 transition">Search</button>
         </div>
-        <div class="weather-info">
-            <h2 id="cityName"></h2>
-            <img id="weatherIcon" src="" alt="" style="display: none;">
-            <p id="temperature"></p>
-            <p id="description"></p>
-            <p id="error" class="error"></p>
+        <div id="weatherResult" class="hidden mt-6 p-6 rounded-lg text-white">
+            <h2 id="cityName" class="text-2xl font-semibold"></h2>
+            <img id="weatherIcon" class="mx-auto w-20 h-20 mt-3">
+            <p id="temperature" class="text-4xl font-bold"></p>
+            <p id="description" class="text-lg"></p>
+            <p id="humidity" class="text-sm"></p>
         </div>
+        <p id="errorMsg" class="text-red-400 mt-4 hidden">City not found. Please try again.</p>
     </div>
     <script src="script.js"></script>
 </body>
